# Skripts

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 20260222_01_add_msal_cache_and_audit_log.py
apps/api/: Dockerfile  README.md  alembic.ini  mypy.ini  pyproject.toml  schemas.py
apps/api/api/: main.py
apps/api/app/: main.py  models.py  settings.py
apps/api/app/actions/: executor.py  routes.py
apps/api/app/auth/: msal_store.py  routes.py  session.py
apps/api/app/db/: engine.py  models.py
apps/api/app/threads/: service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  20260222_0001_initial_schema.py
apps/api/src/api/: __init__.py  main.py
apps/api/tests/: __init__.py  test_migrations.py  test_schema_validation.py
apps/web/: Dockerfile  README.md  package.json  server.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/components/: CardItem.tsx  (+1 more)
apps/web/components/: ActionCards.tsx  ConfirmUndoBar.tsx  SessionFlow.tsx  ThreadList.tsx
apps/web/lib/: api.ts  auth.ts
apps/web/scripts/: build.js  lint.js
apps/web/src/: index.ts  main.js  main.ts
apps/workers/: Dockerfile  README.md  mypy.ini  pyproject.toml  queue.py
apps/workers/app/: celery_app.py  locks.py  tasks_plan.py  tasks_scheduler.py  tasks_sync.py
apps/workers/src/workers/: __init__.py  main.py
apps/workers/tests/: __init__.py  test_worker_queue.py
apps/workers/workers/: __init__.py  main.py
celery/: __init__.py  schedules.py
data/: sample_raw.jsonl
scripts/: node_build_stub.js  node_lint_target.js  sample_dataset_pipeline.py
tests/: __init__.py  conftest.py  test_actions.py  test_auth_routes.py  test_auth_security.py  test_eval_metrics.py  test_eval_runner.py  test_executor_flow.py  test_graph_integration.py  test_migrations.py  test_planner_and_queue.py  test_schema_validation.py  test_sync_pipeline.py  test_tasks_sync.py  test_thread_pass_schema.py  test_thread_service.py  test_threads_service.py
tests/integration/: test_retry_and_delta.py
(+9 files in other folders)
