[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "skripts-api"
version = "0.1.0"
description = "API service for Skripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
skripts-api = "api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["api"]
