[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "skripts-workers"
version = "0.1.0"
description = "Worker service for Skripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
skripts-workers = "workers.main:run"

[tool.hatch.build.targets.wheel]
packages = ["workers"]
